--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,7 +127,6 @@ body {
   }
   @page {
     size: A4;
-   
   }
   body {
     margin: 0;
@@ -138,7 +137,6 @@ body {
     }
   }
 }
-
 
 @import url("https://fonts.googleapis.com/css2?family=Fasthand&display=swap");
 
@@ -176,10 +174,9 @@ td {
   font-family: var(--font-roboto);
 }
 
-.timesNewRoman{
+.timesNewRoman {
   font-family: "Times New Roman", Times, serif;
 }
-
 
 .times {
   height: 900px;
@@ -324,5 +321,23 @@ table#team-list tr:nth-child(n + 1) td:first-child::before {
 
   to {
     transform: rotate(360deg);
+  }
+}
+
+.watermark {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  opacity: 0.2;
+}
+@media print {
+  .watermark {
+    display: block;
+    top: 10%;
+    bottom: 80%;
+    right: 50%;
+    left: 30%;
+    width: 500px;
+    height: auto;
   }
 }
